force-app/main/default/objects/Request__c/fields/Required_manpower_exists_in_the_org__c.field-meta.xml
<CustomField>
    <fullName>Required_manpower_exists_in_the_org__c</fullName>
    <label>Required manpower exists in the org</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>כן, לצורך הקניית מיומנויות במסגרת אותו התפקיד</fullName>
            </value>
            <value>
                <fullName>כן, לצורך הסבה לתפקיד חדש</fullName>
            </value>
            <value>
                <fullName>לא, הארגון מתכוון לגייס עובדים חדשים לטובת תפקיד זה באופן עצמאי</fullName>
            </value>
            <value>
                <fullName>לא, הארגון מעוניין בגיוס עובדים כחלק משירותי זרוע עבודה</fullName>
            </value>
            <value>
                <fullName>כן, מבוסס על עובדים קיימים בארגון אשר עוברים לתפקיד חדש</fullName>
                <isActive>false</isActive>
                <label>כן, מבוסס על עובדים קיימים בארגון אשר עוברים לתפקיד חדש</label>
            </value>
            <value>
                <fullName>כן, מבוסס על עובדים קיימים בארגון שעוברים הכשרה כחלק מתפקידם לטובת שימור ורכישת מיומנויות נדרשות</fullName>
                <isActive>false</isActive>
                <label>כן, מבוסס על עובדים קיימים בארגון שעוברים הכשרה כחלק מתפקידם לטובת שימור ורכישת מיומנויות נדרשות</label>
            </value>
            <value>
                <fullName>לא, הארגון מתכוון להכשיר עובדים הנמצאים כיום בחל&quot;ת</fullName>
                <isActive>false</isActive>
                <label>לא, הארגון מתכוון להכשיר עובדים הנמצאים כיום בחל&quot;ת</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>