force-app/main/default/objects/Request__c/fields/Required_skills__c.field-meta.xml
<CustomField>
    <fullName>Required_skills__c</fullName>
    <label>Required skills</label>
    <length>100</length>
    <type>Text</type>
</CustomField>