force-app/main/default/objects/Request__c/fields/Required_Software_knowledge__c.field-meta.xml
<CustomField>
    <fullName>Required_Software_knowledge__c</fullName>
    <label>Required Software knowledge</label>
    <length>100</length>
    <type>Text</type>
</CustomField>