force-app/main/default/objects/Request__c/fields/Status_Change__c.field-meta.xml
<CustomField>
    <fullName>Status_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Status Change</label>
    <type>Checkbox</type>
</CustomField>