force-app/main/default/objects/Request__c/fields/Status_Triger__c.field-meta.xml
<CustomField>
    <fullName>Status_Triger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Status Triger</label>
    <type>Checkbox</type>
</CustomField>