force-app/main/default/objects/Request__c/fields/Submition_Id__c.field-meta.xml
<CustomField>
    <fullName>Submition_Id__c</fullName>
    <label>Submition Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>