force-app/main/default/objects/Request__c/fields/Training_Duration__c.field-meta.xml
<CustomField>
    <fullName>Training_Duration__c</fullName>
    <label>משך הכשרה נדרשת</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>מתחת ל-100 שעות</fullName>
            </value>
            <value>
                <fullName>בין 100-300 שעות</fullName>
            </value>
            <value>
                <fullName>מעל ל-300 שעות</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>