force-app/main/default/objects/Request__c/fields/Training_was_executed__c.field-meta.xml
<CustomField>
    <fullName>Training_was_executed__c</fullName>
    <label>Training was executed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>לא ידוע</fullName>
            </value>
            <value>
                <fullName>לא</fullName>
            </value>
            <value>
                <fullName>כן</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>