force-app/main/default/objects/Request__c/fields/UpdatedThroughInterface__c.field-meta.xml
<CustomField>
    <fullName>UpdatedThroughInterface__c</fullName>
    <defaultValue>false</defaultValue>
    <label>מעודכן בממשק</label>
    <type>Checkbox</type>
</CustomField>