force-app/main/default/objects/Request__c/fields/Website_Request__c.field-meta.xml
<CustomField>
    <fullName>Website_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>בקשה שנפתחה מהאתר</label>
    <type>Checkbox</type>
</CustomField>