force-app/main/default/objects/Request__c/validationRules/BlockDuplicate.validationRule-meta.xml
<ValidationRule>
    <fullName>BlockDuplicate</fullName>
    <active>true</active>
    <description>לא לאפשר הזנת בקשת מקור לבקשה כפולה, כשסיבת הסגירה אינה בקשה כפולה</description>
    <errorConditionFormula>NOT(ISPICKVAL(Closing_Reason__c, &quot;בקשה כפולה&quot;)) &amp;&amp;  Link_to_Duplicate_request__c &lt;&gt;&quot;&quot;</errorConditionFormula>
    <errorDisplayField>Link_to_Duplicate_request__c</errorDisplayField>
    <errorMessage>לא ניתן לקשר בקשת מקור לבקשה כפולה ללא סיבת סגירה מתאימה</errorMessage>
</ValidationRule>