force-app/main/default/objects/Request__c/validationRules/Hiring_Reason_Not_Null.validationRule-meta.xml
<ValidationRule>
    <fullName>Hiring_Reason_Not_Null</fullName>
    <active>true</active>
    <description>If &quot;Other&quot; is chosen in &quot;hiring reason&quot; field- this field must be not null.</description>
    <errorConditionFormula>ISBLANK( Other_Reason__c )&amp;&amp; ISPICKVAL(Hiring_Reason__c, &quot;אחר&quot;)</errorConditionFormula>
    <errorDisplayField>Other_Reason__c</errorDisplayField>
    <errorMessage>במקרה שבחרת &quot;אחר&quot; בשדה סיבה לגיוס עובדים, יש לתעד בשדה זה את הסיבה</errorMessage>
</ValidationRule>