force-app/main/default/objects/Request__c/validationRules/No_Recommendation_reason.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Recommendation_reason</fullName>
    <active>true</active>
    <description>If in the No recommendation Reason picklist field the selected value isn&apos;t  &quot;Other&quot;, we will not allow entry in the No recommendation Reason field</description>
    <errorConditionFormula>NOT(ISPICKVAL(No_recommendation_Reason_PL__c  , &quot;אחר&quot;))  &amp;&amp;  No_recommendation_Reason__c  &lt;&gt; &quot;&quot;
 || 
ISPICKVAL(No_recommendation_Reason_PL__c  , &quot;אחר&quot;)&amp;&amp;
No_recommendation_Reason__c  = &quot;&quot;</errorConditionFormula>
    <errorDisplayField>No_recommendation_Reason__c</errorDisplayField>
    <errorMessage>בעת בחירה בערך &quot;אחר&quot; בשדה סיבת אי מתן המלצה יש לפרט מהי הסיבה. אחרת, יש להשאיר שדה זה ריק</errorMessage>
</ValidationRule>