force-app/main/default/objects/Request__c/listViews/HomePage.listView-meta.xml
<ListView>
    <fullName>HomePage</fullName>
    <booleanFilter>1 OR (2 AND 3)</booleanFilter>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Account__c</columns>
    <columns>Primary_Contact__c</columns>
    <columns>phone__c</columns>
    <columns>contactmail__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Request__c.Parent_Request</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Request__c.Child_Request</value>
    </filters>
    <filters>
        <field>Request__c</field>
        <operation>equals</operation>
    </filters>
    <label>דף הבית</label>
</ListView>